NAK-984 added get and post API for images
