# src/ska_oso_slt_services/rest/openapi/slt-openapi-v1.yaml
@@ -145,7 +145,7 @@ paths:
         "500":
           $ref: '#/components/responses/InternalServerError'
     
-  /shifts/image/{shift_id}:
+  /shifts/images/{shift_id}:
     post:
       summary: Update image with ID
       description: Update the details of an existing shift.
@@ -162,16 +162,16 @@ paths:
             schema:
               type: object
               properties:
-                filename:
+                files:
                   type: array
                   items:
                     type: string
                     format: binary
       responses:
         "204":
-          description: Success, no new EB found in ODA.
+          description: Success, no slt id found.
         "201":
-          description: SHift Logs Info updated successfully.
+          description: Image upload successfully.
           content:
             application/json:
               schema:
@@ -185,6 +185,28 @@ paths:
         "500":
           $ref: '#/components/responses/InternalServerError'
     
+    get:
+      summary: Get image with ID
+      description: Retrieve the image of a shift by its ID.
+      operationId: ska_oso_slt_services.rest.api.resources.get_shift_media
+      parameters:
+        - in: path
+          name: shift_id
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: The image of the shift.
+          content:
+            image/png:
+              schema:
+                type: string
+                format: binary
+        "404":
+          $ref: '#/components/responses/NotFound'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
 
 components:
   schemas:
